fix: container overflow in firefox

--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@
 body {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 130px 100px 1fr 1fr;
+  grid-template-rows: 130px 100px auto auto;
   font-family: var(--font);
   font-weight: 400;
   background-color: var(--light-pink);
@@ -84,7 +84,7 @@ header h2 {
 
 @media (min-width: 650px) {
   body {
-    grid-template-rows: 180px 140px 1fr auto;
+    grid-template-rows: 180px 140px auto auto;
   }
 
   .deco-bground {
